--- a/style.css
+++ b/style.css
@@ -507,6 +507,7 @@ body {
   background-color: white;
   padding: 50px;
   border-radius: 30px;
+  margin-top: 20px;
 }
 #content .pfp{
   padding-right: 35px;
@@ -524,12 +525,24 @@ body {
 }
 #content .information .input{
   border: 0;
-  width: 80%;
+  width: 90%;
   font-size: 1em;
   margin-bottom: 10px;
   padding: 7px 0;
   background-color: #EEEEEE;
   margin-top: .7em;
+  padding: 10px;
+}
+#content .information .btn{
+  text-transform: uppercase;
+  font-size: 15px;
+  border: 0;
+  color: black;
+  background: #3c91e6;
+  padding: 7px 15px;
+  margin-top: 15px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 
@@ -549,6 +562,14 @@ body {
 
   #content nav .nav-link {
     display: none;
+  }
+
+  #content .information{
+    padding-left: 0;
+  }
+
+  #content .information h1{
+    font-size: 25px;
   }
 }
 
@@ -594,5 +615,9 @@ body {
   }
   #content main .table-data .todo .todo-list {
     min-width: 420px;
+  }
+  #content .account{
+    display: flex;
+    flex-direction: column;
   }
 }
