--- a/style.css
+++ b/style.css
@@ -504,13 +504,27 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: white;
+  background-color: var(--light);
   padding: 50px;
   border-radius: 30px;
   margin-top: 20px;
 }
 
 /* KULANG PA NG SWITCH MODE SHIT */
+#content .account .switch-mode {
+  background: var(--light);
+}
+#content .account .switch-mode::before {
+  /* content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  bottom: 2px;
+  width: calc(25px - 4px); */
+  background: var(--blue);
+  /* border-radius: 50%; */
+  transition: all 0.3s ease;
+}
 
 #content .pfp{
   padding-right: 35px;
@@ -520,22 +534,45 @@ body {
 }
 #content .information h1{
   font-size: 35px;
+  color: var(--dark);
 }
 #content .information h2{
   font-weight: 500;
   font-size: 15px;
   text-transform: uppercase;
+  color: var(--dark);
 }
+
+#content .information h1 .switch-mode, #content .information h2 .switch-mode {
+  background: var(--light);
+  color: var(--light);
+}
+#content .information h1 .switch-mode::before, #content .information h2 .switch-mode::before {
+  background: var(--blue);
+  color: var(--light);
+  transition: all 0.3s ease;
+}
+
 #content .information .input{
   border: 0;
+  border-radius: 5px;
   width: 90%;
   font-size: 1em;
   margin-bottom: 10px;
   padding: 7px 0;
-  background-color: #EEEEEE;
+  background: lightgray;
   margin-top: .7em;
   padding: 10px;
 }
+
+#content .information .input .switch-mode{
+  background: grey;
+}
+#content .information .input .switch-mode::before{
+  background: grey;
+  transition: all 0.3s ease;
+}
+
 #content .information .btn{
   text-transform: uppercase;
   font-size: 15px;
